--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt": "1.0.x",
     "grunt-browser-sync": "2.2.x",
     "grunt-contrib-less": "1.4.x",
+    "grunt-contrib-uglify": "^3.1.0",
     "grunt-contrib-watch": "1.0.x",
     "grunt-postcss": "0.9.x",
     "grunt-svg-sprites": "^1.0.0",
@@ -37,5 +38,9 @@
   ],
   "engines": {
     "node": "8.2"
+  },
+  "dependencies": {
+    "grunt-contrib-concat": "^1.0.1",
+    "load-grunt-tasks": "^3.5.2"
   }
 }
