--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-uglify": "^3.1.0",
     "grunt-contrib-watch": "1.0.x",
     "grunt-postcss": "0.9.x",
+    "grunt-svg-sprite": "^1.3.7",
     "grunt-svg-sprites": "^1.0.0",
     "stylelint": "8.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
